--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,4 @@
-requests==2.31.0
-chardet==5.2.0
-python-dateutil==2.9.0
-wxpusher==0.1.4
-pillow==10.2.0
-pystray==0.19.5
+requests>=2.31.0
+chardet>=5.2.0
+pystray>=0.19.5
+Pillow>=10.1.0
