feat: 增强文件编码处理和关键词匹配
- 添加自动文件编码检测和UTF-8转换功能
- 支持多关键词组合匹配模式
- 优化日志处理和编码检测流程
- 更新文档和配置模板说明

--- a/config.json.template
+++ b/config.json.template
@@ -3,6 +3,10 @@
   "push_interval": 0,
   "app_token": "",
   "uid": "",
-  "keywords": [],
+  "keywords": [
+    "单关键词示例",
+    "关键词1|关键词2",
+    "词组1|词组2|词组3"
+  ],
   "log_path": ""
 }
