--- a/config.json
+++ b/config.json
@@ -2,10 +2,10 @@
   "minimize_to_tray": false,
   "interval": 100,
   "push_interval": 0,
-  "app_token": "",
-  "uid": "",
+  "app_token": "11",
+  "uid": "22",
   "keywords": [
     "我想購買"
   ],
-  "log_path": ""
+  "log_path": "F:/Program Files (x86)/Grinding Gear Games/Path of Exile 2/logs/Client.txt"
 }
