--- a/config.json.template
+++ b/config.json.template
@@ -1,12 +1,42 @@
 {
-  "interval": 1000,
+  "minimize_to_tray": false,
+  "interval": 100,
   "push_interval": 0,
-  "app_token": "",
-  "uid": "",
+  "app_token": "放token",
+  "uid": "放UID",
   "keywords": [
-    "单关键词示例",
-    "关键词1|关键词2",
-    "词组1|词组2|词组3"
+    {
+      "mode": "交易模式",
+      "pattern": "*來自 {@user}: 你好，我想購買 {@item} 標價 {@price} {@currency} 在 {@mode} (倉庫頁 \"{@tab}\"; 位置: {@p1} {@p1_num}, {@p2} {@p2_num})"
+    },
+    {
+      "mode": "消息模式",
+      "pattern": "來自|購買"
+    }
   ],
-  "log_path": ""
-}
+  "log_path": "F:/Program Files (x86)/Grinding Gear Games/Path of Exile 2/logs/Client.txt",
+  "currencies": [
+    "divine",
+    "chance"
+  ],
+  "templates": [
+    "來自 {@user}: 你好，我想購買 {@item} 標價 {@price} {@currency} 在 {@mode} (倉庫頁 {@tab}; 位置: {@p1} {@p1_num}, {@p2} {@p2_num})"
+  ],
+  "keyword_modes": [
+    "消息模式",
+    "交易模式"
+  ],
+  "wxpusher": {
+    "enabled": true,
+    "app_token": "AT_l1BflOjhu3ZlAdUJagz5KQyi3lK3le0p",
+    "uid": "UID_tEL7WQ9W9aRpHp0im3vsP4V260Q4"
+  },
+  "email": {
+    "enabled": false,
+    "smtp_server": "",
+    "smtp_port": "",
+    "sender_email": "",
+    "email_password": "",
+    "receiver_email": ""
+  }
+f
