--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,7 @@ requests>=2.31.0
 chardet>=5.2.0
 pystray>=0.19.5
 Pillow>=10.1.0
+numpy>=1.24.0
+pytesseract>=0.3.10
+opencv-python>=4.8.0
+pywin32>=306
