--- a/config.json.template
+++ b/config.json.template
@@ -40,5 +40,24 @@
     "email_password": "",
     "receiver_email": ""
   },
+  "serverchan": {
+    "enabled": false,
+    "send_key": ""
+  },
+  "qmsg": {
+    "enabled": false,
+    "key": "",
+    "qq": ""
+  },
+  "auto_trade": {
+    "enabled": false,
+    "party_timeout_ms": 30000,
+    "stash_interval_ms": 1000,
+    "trade_interval_ms": 1000,
+    "trade_timeout_ms": 10000,
+    "accepted_templates": [
+      "*來自 {@user}: 你好，我想購買 {@item} 標價 {@price} {@currency} 在 {@mode} (倉庫頁 \"{@tab}\"; 位置: {@p1} {@p1_num}, {@p2} {@p2_num})"
+    ]
+  },
   "game_window": "Path of Exile 2"
 }
