重命名Qmsg推送配置为qmsgchan，优化推送处理器的动态加载和配置验证逻辑

--- a/config.json.template
+++ b/config.json.template
@@ -44,7 +44,7 @@
     "enabled": false,
     "send_key": ""
   },
-  "qmsg": {
+  "qmsgchan": {
     "enabled": false,
     "key": "",
     "qq": ""
