--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,8 @@ chardet>=5.2.0
 pystray>=0.19.5
 Pillow>=10.1.0
 numpy>=1.24.0
-pytesseract>=0.3.10
 opencv-python>=4.8.0
 pywin32>=306
 PySide6>=6.6.1
+paddlepaddle>=2.6.0
+paddleocr>=2.9.0
