移除不必要的模型文件和FFmpeg工具，更新依赖项以优化打包配置

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ numpy>=1.24.0
 opencv-python>=4.8.0
 pywin32>=306
 PySide6>=6.6.1
-paddlepaddle>=2.6.0
+paddlelite>=2.13.0
 paddleocr>=2.9.0
 cloudscraper>=1.2.71
 undetected-chromedriver>=3.5.0
